html link added

--- a/NYC buildings as points.ipynb
+++ b/NYC buildings as points.ipynb
@@ -1076,11 +1076,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6fa71616-a414-43c5-bfa1-a7155df3634f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#m.save('building_heatmap.html')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "00722d3b-8fad-468e-bc96-2fade61523ed",
    "metadata": {},
    "source": [
-    "As you can see in the interactive heatmap above, the highest concentrations of vulnerable/low elevation buildings are in Brooklyn, Queens, and Staten Island.  This can inform our analysis going forward by allowing us to hone in on those locations that are most at risk to flooding."
+    "As you can see in the interactive heatmap above, or in the link to the html version ( the highest concentrations of vulnerable/low elevation buildings are in Brooklyn, Queens, and Staten Island.  This can inform our analysis going forward by allowing us to hone in on those locations that are most at risk to flooding."
    ]
   },
   {
