--- a/NYC buildings as points.ipynb
+++ b/NYC buildings as points.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Experimental Notebook"
+    "# Experimental Heatmap Notebook"
    ]
   },
   {
@@ -1090,7 +1090,7 @@
    "id": "00722d3b-8fad-468e-bc96-2fade61523ed",
    "metadata": {},
    "source": [
-    "As you can see in the interactive heatmap above, or in the link to the html version ( the highest concentrations of vulnerable/low elevation buildings are in Brooklyn, Queens, and Staten Island.  This can inform our analysis going forward by allowing us to hone in on those locations that are most at risk to flooding."
+    "As you can see in the interactive heatmap above, or in the html version (https://github.com/jjbasinger/up206a-jacob/blob/main/building_heatmap.html), the highest concentrations of vulnerable/low elevation buildings are in Brooklyn, Queens, and Staten Island.  This can inform our analysis going forward by allowing us to hone in on those locations that are most at risk to flooding."
    ]
   },
   {
